# obs-studio

UI/: CMakeLists.txt  adv-audio-control.cpp  obs-app.cpp  volume-control.cpp  volume-control.hpp  window-basic-adv-audio.cpp  window-basic-main-outputs.cpp  window-basic-main.cpp  window-basic-main.hpp  window-basic-settings.cpp  window-basic-settings.hpp  window-basic-status-bar.cpp  window-basic-status-bar.hpp
UI/data/locale/: en-US.ini
UI/data/themes/: Acri.qss  Dark.qss  Default.qss  Rachni.qss
UI/forms/: OBSBasic.ui  OBSBasicSettings.ui  obs.qrc
UI/frontend-plugins/ffmpeg-output-ui/: CMakeLists.txt  FFmpegOutputUI.cpp  FFmpegOutputUI.h  ffmpeg-ui-main.cpp
UI/frontend-plugins/ffmpeg-output-ui/forms/: ffmpeg.qrc  output.ui
cmake/Modules/: CopyMSVCBins.cmake
libobs/: obs-audio-controls.c  obs-audio-controls.h  obs-audio.c  obs-encoder.h  obs-internal.h  obs-output.c  obs-output.h  obs-source.c  obs-source.h  obs.c  obs.h
libobs/audio-monitoring/pulse/: pulseaudio-output.c
libobs/audio-monitoring/win32/: wasapi-output.c  wasapi-output.h
libobs/media-io/: audio-io.h  audio-resampler-ffmpeg.c  audio-resampler.h
plugins/: CMakeLists.txt
plugins/decklink/: audio-repack.c  audio-repack.h  const.h  decklink-device-instance.cpp  decklink-device-instance.hpp  decklink-source.cpp  decklink.hpp  plugin-main.cpp
plugins/decklink/data/locale/: en-US.ini
plugins/image-source/: obs-slideshow.c
plugins/linux-pulseaudio/: pulse-input.c
plugins/mac-capture/: mac-audio.c
plugins/mac-vth264/: encoder.c
plugins/obs-ffmpeg/: obs-ffmpeg-audio-encoders.c  obs-ffmpeg-compat.h  obs-ffmpeg-formats.h  obs-ffmpeg-nvenc.c  obs-ffmpeg-output.c  obs-ffmpeg-source.c
plugins/obs-ffmpeg/data/locale/: en-US.ini
plugins/obs-ffmpeg/ffmpeg-mux/: ffmpeg-mux.c
plugins/obs-filters/: CMakeLists.txt  compressor-filter.c  expander-filter.c  gain-filter.c  noise-gate-filter.c  noise-suppress-filter.c  obs-filters.c  rematrix-filter.c
plugins/obs-filters/data/: compressor_presets.json
plugins/obs-filters/data/locale/: en-US.ini
plugins/obs-outputs/: flv-mux.c  rtmp-stream.c  rtmp-stream.h
plugins/obs-qsv11/: obs-qsv11.c
plugins/obs-track-out/: CMakeLists.txt  obs-track-out.c
plugins/obs-x264/: obs-x264.c
plugins/win-asio/: CMakeLists.txt  asio-input.cpp  asioselector.cpp  asioselector.h  circle-buffer.h  helpers.h
plugins/win-asio/data/locale/: en-US.ini
plugins/win-asio/gui/: asioselector.cpp  asioselector.h
plugins/win-dshow/: ffmpeg-decode.c  win-dshow.cpp
plugins/win-wasapi/: win-wasapi.cpp
